--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,11 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import 'header';
+@import 'toppage';
 
 body {
   background-color: #f9fcfb;
   padding-top: 76px;
   font-family: Lato, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  min-height:100vh ;
+  position: relative;
+  padding-bottom:50px;
+  box-sizing:border-box;
 }
 
 .img-fluid {
