--- a/app/javascript/stylesheets/toppage.scss
+++ b/app/javascript/stylesheets/toppage.scss
@@ -1,4 +1,3 @@
-
 //header
 .navbar {
   background-color: #f9fcfb;
@@ -16,3 +15,17 @@ footer {
 .footer-text {
   color: #636262;
 }
+
+//規約
+
+.wrap-terms {
+  border-radius: 15px;
+  margin: 20px 0;
+  background: #f9fcfb;
+  border: 5px solid #fad4d4e0;
+  font-size: 1rem;
+
+  @media screen and (max-width: 767px) {
+    font-size: 0.5rem;
+  }
+} 
