--- a/app/views/layouts/dashboard/_sidebar.html.erb
+++ b/app/views/layouts/dashboard/_sidebar.html.erb
@@ -15,13 +15,13 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to dashboard_items_path, class: "nav-link rails-link" do %>
+        <%= link_to root_path, class: "nav-link rails-link" do %>
           <i class="nav-icon fas fa-utensils"></i>
           <p>商品</p>
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to dashboard_reservations_path, class: "nav-link" do %>
+        <%= link_to root_path, class: "nav-link" do %>
           <i class="nav-icon far fa-calendar-check"></i>
           <p>予約一覧</p>
         <% end %>
