--- a/app/javascript/stylesheets/button.scss
+++ b/app/javascript/stylesheets/button.scss
@@ -8,3 +8,14 @@
   font-weight: bold;
   margin-top: 50px;
 }
+
+.btn-new {
+  background-color: #f17272e0;
+  border: none;
+  width: 100%;
+  text-align: center;
+  color: white;
+  padding: 16px 0;
+  font-weight: bold;
+  margin-top: 50px;
+}
