--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -1,8 +1,8 @@
-<div class="content">
-  <h1>商品管理</h1>
+<div class="container">
+  <h1 class="title">商品一覧</h1>
   <div class="mt-2">
     <div class="d-flex justify-content-between w-75 mt-4">
-      <%= link_to "新規作成", new_dashboard_product_path, class: "btn btn-primary" %>
+      <%= link_to "新規作成", new_dashboard_item_path, class: "btn btn-new" %>
     </div>
     <table class="table table-responsive mt-5">
       <thead>
@@ -11,10 +11,8 @@
           <th scope="col">画像</th>
           <th scope="col">商品名</th>
           <th scope="col">価格</th>
-          <th scope="col">カテゴリ名</th>
-          <th scope="col">タグ</th>
-          <th scope="col"></th>
-          <th scope="col"></th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -22,16 +20,12 @@
         <tr>
           <th scope="row"><%= item.id %></td>
           <td>
-            <% if item.image.attached? %>
-              <%= image_tag item.image, :size => '100x100' %>
-            <% else %>
-              <%= image_tag "salt.png", :size => '100x100' %>
-            <% end %>
+            <%= image_tag item.get_image(100, 100)%>
           </td>
           <td><%= item.name %></td>
           <td><%= item.price.to_s(:delimited) %></td>
           <td>
-            <%= link_to "編集", edit_dashboard_item_path(item), class: " btn btn-outline-success  btn-sm" %>
+            <%= link_to "編集", edit_dashboard_item_path(item), class: "btn btn-outline-success  btn-sm" %>
           </td>
           <td>
             <%= link_to "削除", dashboard_item_path(item), method: :delete, class: "btn btn-outline-danger btn-sm" %>
