--- a/app/views/dashboard/reservations/index.html.erb
+++ b/app/views/dashboard/reservations/index.html.erb
@@ -11,7 +11,7 @@
               <th scope="col" class="text-nowrap">日にち</th>
               <th scope="col" class="text-nowrap">時間</th>
               <th scope="col" class="text-nowrap">名前</th>
-              <th scope="col" class="text-nowrap">人数</th>
+              <th scope="col" class="text-nowrap">予約数</th>
               <th scope="col" class="text-nowrap">ステータス</th>
               <th scope="col" class="text-nowrap"></th>
             </tr>
