[add]管理画面での予約詳細画面

--- a/app/views/dashboard/reservations/_reservation.html.erb
+++ b/app/views/dashboard/reservations/_reservation.html.erb
@@ -6,7 +6,7 @@
     <%= reservation.reservation_time %>
   </td>
   <td class="text-nowrap">
-    <%= reservation.name %>
+    <%= reservation.name %>様
   </td>
   <td class="text-nowrap">
     <%= reservation.number_of_items %>
