--- a/app/views/dashboard/users/index.html.erb
+++ b/app/views/dashboard/users/index.html.erb
@@ -16,10 +16,11 @@
   <table class="table mt-5">
     <thead>
       <tr>
-        <th scope="col" class="w-25">ID</th>
+        <th scope="col">ID</th>
         <th scope="col">名前</th>
         <th scope="col">メールアドレス</th>
         <th scope="col">電話番号</th>
+        <th scope="col">予約履歴</th>
         <th scope="col"></th>
       </tr>
     </thead>
@@ -30,6 +31,7 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.phone %></td>
+        <td><%=link_to "予約履歴" ,dashboard_user_path(user) ,class: "btn btn-log btn-sm mt-0"%></td>
         <td>
           <%= form_with model: user, url: dashboard_user_path(user), local: true, method: :delete do |f| %>
             <% if user.deleted_flg %>
