[add]管理者側予約変更

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -52,7 +52,7 @@
     <small>
       *12個以上のご予約のお客様はお電話（012345678）にてお問い合わせください。<br>
       お電話受付時間は14:00 - 15:00の間です。<br>
-      定休日は水曜日、祝日です。<br>
+      定休日は水曜日、土曜日です。<br>
     </small>
   </div>
   <div class="actions text-center mb-3">
