カレンダー表示

--- a/app/views/dashboard/reservations/show.html.erb
+++ b/app/views/dashboard/reservations/show.html.erb
@@ -29,8 +29,8 @@
           <td><%= @reservation.reservation_time %></td>
         </tr>
         <tr>
-          <th scope="row" class="text-nowrap">人数</th>
-          <td><%= @reservation.number_of_items %></td>
+          <th scope="row" class="text-nowrap">予約数</th>
+          <td><%= @reservation.number_of_items %>個</td>
         </tr>
         <tr>
           <th scope="row" class="text-nowrap">名前</th>
