--- a/app/views/dashboard/reservations/_reservation.html.erb
+++ b/app/views/dashboard/reservations/_reservation.html.erb
@@ -10,7 +10,7 @@
       <%= reservation.name %>様
     </td>
     <td class="text-nowrap">
-      <%= reservation.number_of_items %>
+      <%= reservation.number_of_items %>個
     </td>
     <td class="text-nowrap">
       <%= reservation.reservation_status_i18n %>
