--- a/app/views/layouts/dashboard/_sidebar.html.erb
+++ b/app/views/layouts/dashboard/_sidebar.html.erb
@@ -3,7 +3,7 @@
   <nav class="mt-2">
     <ul>
       <li class="nav-item">
-        <%= link_to root_path, class: "nav-link" do %>
+        <%= link_to dashboard_path, class: "nav-link" do %>
           <i class="nav-icon fas fa-home"></i>
           <p>Home</p>
         <% end %>
@@ -27,7 +27,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to root_path, class: "nav-link" do %>
+        <%= link_to dashboard_calendar_path, class: "nav-link" do %>
           <i class="nav-icon far fa-calendar-alt"></i>
           <p>予約カレンダー</p>
         <% end %>
