--- a/app/views/dashboard/items/_form.html.erb
+++ b/app/views/dashboard/items/_form.html.erb
@@ -4,6 +4,7 @@
   <hr>
 
   <%= form_with model: @item, url: dashboard_items_path, local: true do |f| %>
+    <%= render 'layouts/error', object: f.object %>
     <div class="form-inline mt-4 mb-4 row">
       <%= f.label "商品名", class: "col-2 d-flex justify-content-start" %>
       <%= f.text_field :name, class: "form-control col-8" %>
