--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: @reservation, url: reservations_path, local: true, id: "reservation_form" do |f| %>
+  <%= render 'layouts/error', object: f.object %>
   <%= f.hidden_field :user_id, value: current_user&.id %>
   <div class="form-group">
     <div class="text-left mb-1">
