--- a/app/views/dashboard/items/_form.html.erb
+++ b/app/views/dashboard/items/_form.html.erb
@@ -12,7 +12,7 @@
 
     <div class="form-inline mt-4 mb-4 row">
       <%= f.label "商品説明", class: "col-2 d-flex justify-content-start" %>
-      <%= f.text_area :description, class: "form-control col-8" %>
+      <%= f.text_area :description, class: "form-control col-8 w-100" %>
     </div>
 
     <div class="form-inline mt-4 mb-4 row">
