[add]User側のお問い合わせ

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,7 +46,7 @@
       <li><%= link_to "NEWS", root_path, class: "dropdown-item" %></li>
       <li><%= link_to "MENU", root_path, class: "dropdown-item" %></li>
       <li><%= link_to "ABOUT US",about_path , class: "dropdown-item" %></li>
-      <li><%= link_to "お問い合わせ", root_path, class: "dropdown-item" %></li>
+      <li><%= link_to "お問い合わせ", contacts_path, class: "dropdown-item" %></li>
     </ul>
   </div>
   <% if user_signed_in? %>
