--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Contacts#index</h1>
-<p>Find me in app/views/contacts/index.html.erb</p>
+<div class="container">
+  <h1 class="text-center my-5">お問い合わせ</h1>
+  <div class="row px-2">
+    <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 border p-3 mb-4">
+      <%= render "form" %>
+    </div>
+    <div class="col-12 text-center mb-5">
+      <%= link_to "戻る", root_path %>
+    </div>
+  </div>
+</div>
