[add]管理者側contactコントローラー

--- a/app/views/layouts/dashboard/_header.html.erb
+++ b/app/views/layouts/dashboard/_header.html.erb
@@ -33,7 +33,7 @@
     <% end %>
   </li>
   <li>
-    <%= link_to root_path, class: "nav-link" do %>
+    <%= link_to dashboard_contacts_path, class: "nav-link" do %>
       <i class="nav-icon far fa-envelope"></i>
       <p>お問い合わせ</p>
     <% end %>
