[add]お問い合わせステータス更新機能

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -46,6 +46,6 @@
     <small>・ご入力頂いたメールアドレスに自動で確認メールを送信しております。</small><br>
   </div>
   <div class="actions text-center mb-3">
-    <%= f.submit "次へ進む", class: "btn btn-success w-100" %>
+    <%= f.submit "次へ進む", class: "btn btn-new w-100" %>
   </div>
 <% end %>
