--- a/app/views/dashboard/contacts/index.html.erb
+++ b/app/views/dashboard/contacts/index.html.erb
@@ -15,7 +15,7 @@
             </tr>
           </thead>
           <tbody>
-            <%= render @contacts %>
+            <%= render 'contact',contacts: @contacts %>
           </tbody>
         </table>
       </div>
