--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,46 @@
-top
+<div class="my-3">
+    <h3>新着予約</h3>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col" class="text-nowrap">予約日</th>
+            <th scope="col" class="text-nowrap">時間</th>
+            <th scope="col" class="text-nowrap">名前</th>
+            <th scope="col" class="text-nowrap">予約数</th>
+            <th scope="col" class="text-nowrap">ステータス</th>
+            <th scope="col" class="text-nowrap"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render partial: "dashboard/reservations/reservation", reservations: @reservations %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<div class="my-3">
+  <h3>新着お問い合わせ</h3>
+</div>
+<div class="row">
+  <div class="col-12">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col" class="text-nowrap">問い合わせ日時</th>
+            <th scope="col" class="text-nowrap">種類</th>
+            <th scope="col" class="text-nowrap">ステータス</th>
+            <th scope="col" class="text-nowrap"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render 'dashboard/contacts/contact', contacts: @contacts %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
