正しくメールが遅れるように修正

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,6 +17,11 @@
 
         <% end %>
 
+        <%= link_to contacts_path do %>
+
+          <i class="far fa-envelope fa-2x mr-1 footer-text"></i>
+
+        <% end %>
       </div>
 
       <div class="text-center footer-text">
