--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -50,13 +50,13 @@
     </div>
   </div>
   <div class="text-left mb-3">
-    <small>
-      *12個以上のご予約のお客様はお電話（012345678）にてお問い合わせください。<br>
-      お電話受付時間は14:00 - 15:00の間です。<br>
-      定休日は水曜日、土曜日です。<br>
-    </small>
+    <p>・12個以上のご予約のお客様は<%= link_to "お問い合わせページ", contacts_path %>,またはお電話（012-345-678）にてお問い合わせください</p>
+    <p>・お電話受付時間は14:00 - 15:00の間です。</p>
+    <p>・定休日は水曜日、土曜日です。</p>
+    <p>・英数字は半角での記入をお願いいたします。</p>
+    <p>・ご入力頂いたメールアドレスに自動で確認メールを送信しております。</p>
   </div>
   <div class="actions text-center mb-3">
-    <%= f.submit "規約に同意して次へ", class: "btn btn-success w-100" %>
+    <%= f.submit "規約に同意して次へ", class: "btn btn-new w-100" %>
   </div>
 <% end %>
