--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -14,7 +14,7 @@
     <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 border p-3 mb-4">
       <%= render "form" %>
       <div class="text-center my-3">
-        <small><%= link_to "利用規約", terms_path %>、<%= link_to "プライバシーポリシー", privacy_path %>をご確認の上、ボタンを押してください。</small>
+        <small><p><%= link_to "利用規約", terms_path %>、<%= link_to "プライバシーポリシー", privacy_path %>をご確認の上、ボタンを押してください。</p></small>
       </div>
     </div>
     <div class="col-12 text-center mb-5">
