--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="d-flex align-items-center">
-        <%= link_to root_path do %>
+        <%= link_to mypage_reservation_users_path do %>
           <i class="fas fa-chevron-right fa-2x" style="color:gray;"></i>
         <% end %>
       </div>
