userの予約履歴から戻るボタン設置

--- a/app/views/users/user_reservation.html.erb
+++ b/app/views/users/user_reservation.html.erb
@@ -24,7 +24,7 @@
         <%= paginate @reservations %>
       </div>
       <div class="text-center mb-3">
-        <%= link_to "一覧へ", dashboard_reservations_path, class: "btn btn-secondary" %>
+        <%= link_to "戻る", root_path, class: "btn btn-secondary" %>
       </div>
     </div>
   </div>
