--- a/app/javascript/stylesheets/toppage.scss
+++ b/app/javascript/stylesheets/toppage.scss
@@ -77,6 +77,7 @@ footer {
 
 //top-page
 .top-title{
+  font-size: 30px;
   font-weight: bold;
   margin-bottom: 0;
   &_border{
@@ -85,4 +86,8 @@ footer {
     border-bottom:4px solid #f78686 ;
     margin-bottom: 20px;
   }
+}
+
+.inner-contents{
+  text-align:center;
 }
