--- a/app/javascript/stylesheets/toppage.scss
+++ b/app/javascript/stylesheets/toppage.scss
@@ -91,3 +91,11 @@ footer {
 .inner-contents{
   text-align:center;
 }
+
+.today-ichigo{
+  border:8px solid #f78686;
+  background-color: #f78686;
+  border-radius: 10px;
+  width: 200px;
+  margin: 0 auto;
+}
