--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -10,19 +10,19 @@
 						<%=image_tag "reserve.png",height:"300px"%>
 					<% end %>
 				</div>
+				
 				<div class="text-center">
 				苺大福を中心に和菓子を扱っている小さなお店の予約サイトです。<br>
         頑張っている自分のご褒美に苺大福はいかがですか。<br>
         大人気の苺大福は練たての求肥にたっぷりの餡子とジューシーないちごの組み合わせが絶品です。
 				</div>
 			</section>
-			<section id="section2">
-				<ul id="gallery" calss="row">
-					<li class="col"><%=image_tag "",width:"360", height:"350" ,alt:"店内"%></li>
-					<li class="col"><%=image_tag "",width:"360", height:"350" ,alt:"いちご"%></li>
-					<li class="col"><%=image_tag "",width:"360", height:"350" ,alt:"看板"%></li>
-				</ul>
-			</section>
+			<div calss="row">
+				<div class="col text-center">
+					<%=image_tag "create-ichigo.jpg",width:"250", height:"250" ,alt:"いちご"%>
+					<%=image_tag "ichigo.jpg",width:"250", height:"250" ,alt:""%>
+				</div>
+			</div>
 			<section id="section3">
 				<header>
 					<h2 class="top-title"><span>こだわり</span></h2>
