--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -50,6 +50,8 @@
     </div>
   </div>
   <div class="text-left mb-3">
+    <p>お支払いはご来店当日にお願いいたします。</p>
+    <p>お支払い方法は現金・クレジットカードがご利用いただけます。</p>
     <p>・10個以上のご予約のお客様は<%= link_to "お問い合わせページ", contacts_path %>,またはお電話（012-345-678）にてお問い合わせください</p>
     <p>・お電話受付時間は14:00 - 15:00の間です。</p>
     <p>・定休日は水曜日、土曜日です。</p>
