--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -23,7 +23,7 @@
             <%= image_tag item.get_image(100, 100)%>
           </td>
           <td><%= item.name %></td>
-          <td><%= item.price.to_s(:delimited) %></td>
+          <td><%= item.price.to_s(:delimited) %>円</td>
           <td>
             <%= link_to "編集", edit_dashboard_item_path(item), class: "btn btn-outline-success  btn-sm" %>
           </td>
