--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @contact, url: contacts_path, local: true do |f| %>
+<%= form_with model: @contact,url: contacts_path, method: :post, url: contacts_confirm_path, local: true, local: true do |f| %>
   <div class="form-group">
     <div class="text-left mb-1">
       <%= f.label :name %>
