--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @reservation, url: reservations_path, local: true, id: "reservation_form" do |f| %>
+<%= form_with model: @reservation,url: reservations_confirm_path, method: :post, local: true, id: "reservation_form" do |f| %>
   <%= render 'layouts/error', object: f.object %>
   <%= f.hidden_field :user_id, value: current_user&.id %>
   <div class="form-group">
