[add]shop外観イメージ

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -19,6 +19,7 @@
 			</section>
 			<div calss="row">
 				<div class="col text-center">
+					<%=image_tag "shop-image.jpg",width:"250", height:"250" ,alt:"外観"%>
 					<%=image_tag "create-ichigo.jpg",width:"250", height:"250" ,alt:"いちご"%>
 					<%=image_tag "ichigo.jpg",width:"250", height:"250" ,alt:""%>
 				</div>
