★予約後のステータス更新

--- a/app/views/dashboard/reservations/show.html.erb
+++ b/app/views/dashboard/reservations/show.html.erb
@@ -4,6 +4,7 @@
       <div class="my-3">
         <h2>予約詳細</h2>
       </div>
+      <%= render "status" %>
       <div class="text-right mb-3">
         <%= link_to edit_dashboard_reservation_path(@reservation), class: "btn btn-success" do %>
           予約変更
