--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,10 +30,10 @@
       <% end %>
     </div>
     <div class="navbar-nav d-block d-lg-none">
-      <%= link_to new_user_session_path do %>
+      <%= link_to users_guest_sign_in_path, method: :post do %>
         <div class="flex-column mx-3 text-center">
           <i class="fas fa-sign-in-alt fa-2x"></i>
-          <p class="text-nowrap mb-0">ログイン</p>
+          <p class="text-nowrap mb-0">ゲストログイン</p>
         </div>
       <% end %>
     </div>
@@ -76,10 +76,10 @@
       <% end %>
     </div>
     <div class="navbar-nav mr-auto d-none d-lg-block">
-      <%= link_to new_user_session_path do %>
+      <%= link_to users_guest_sign_in_path ,method: :post do %>
         <div class="flex-column mx-3 text-center">
           <i class="fas fa-sign-in-alt  fa-2x"></i>
-          <p class="text-nowrap mb-0">ログイン</p>
+          <p class="text-nowrap mb-0">ゲストログイン</p>
         </div>
       <% end %>
     </div>
