--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -42,8 +42,10 @@
         </div>
       </div>
       <div class="d-flex align-items-center">
-        <%= link_to mypage_edit_password_users_path do %>
-          <i class="fas fa-chevron-right fa-2x" style="color:gray;"></i>
+        <% if user.name != "guestuser" %>
+          <%= link_to mypage_edit_password_users_path do %>
+            <i class="fas fa-chevron-right fa-2x" style="color:gray;"></i>
+          <% end %>
         <% end %>
       </div>
     </div>
