--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,11 @@
     <div class="d-flex justify-content-between">
       <h2>アカウント情報の変更</h2>
       <div class="d-flex align-items-center">
-        <%= link_to edit_user_registration_path do %>
-          <button type="button" class="btn btn-outline-secondary ml-5">変更する</button>
-        <% end %>       
+        <% if user.name != "guestuser" %>
+          <%= link_to edit_user_registration_path do %>
+            <button type="button" class="btn btn-outline-secondary ml-5">変更する</button>
+          <% end %>     
+        <% end %>  
       </div>
     </div>
     <hr>
