--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,9 +31,8 @@
     </div>
     <div class="navbar-nav d-block d-lg-none">
       <%= link_to users_guest_sign_in_path, method: :post do %>
-        <div class="flex-column mx-3 text-center">
-          <i class="fas fa-sign-in-alt fa-2x"></i>
-          <p class="text-nowrap mb-0">ゲストログイン</p>
+        <div class="btn btn-dark btn-sm mx-2">
+          <p>ゲストログイン</p>
         </div>
       <% end %>
     </div>
@@ -77,9 +76,8 @@
     </div>
     <div class="navbar-nav mr-auto d-none d-lg-block">
       <%= link_to users_guest_sign_in_path ,method: :post do %>
-        <div class="flex-column mx-3 text-center">
-          <i class="fas fa-sign-in-alt  fa-2x"></i>
-          <p class="text-nowrap mb-0">ゲストログイン</p>
+        <div class="btn btn-dark">
+          <p>ゲストログイン</p>
         </div>
       <% end %>
     </div>
