--- a/app/views/dashboard/users/index.html.erb
+++ b/app/views/dashboard/users/index.html.erb
@@ -33,6 +33,7 @@
         <td><%= user.phone %></td>
         <td><%=link_to "予約履歴" ,dashboard_user_path(user) ,class: "btn btn-log btn-sm mt-0"%></td>
         <td>
+        <% if user.name != "guestuser" %>
           <%= form_with model: user, url: dashboard_user_path(user), local: true, method: :delete do |f| %>
             <% if user.deleted_flg %>
               <%= f.submit "復帰", class: "btn btn-success" %>
@@ -40,6 +41,7 @@
               <%= f.submit "削除", class: "btn btn-danger" %>
             <% end %>
           <% end %>
+        <% end %>
         </td>
       </tr>
       <% end %>
