--- a/app/views/layouts/dashboard/_header.html.erb
+++ b/app/views/layouts/dashboard/_header.html.erb
@@ -1,45 +1,45 @@
   <div class="openbtn"><span></span><span></span><span></span></div>
   <nav id="g-nav">
-  <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
-  <ul>
-  <li>
-    <%= link_to dashboard_path, class: "nav-link" do %>
-      <i class="nav-icon fas fa-home"></i>
-      <p>Home</p>
-    <% end %>
-  </li>  
-  <li>
-    <%= link_to dashboard_users_path, class: "nav-link" do %>
-      <i class="nav-icon far fa-user"></i>
-      <p>顧客一覧</p>
-    <% end %>
-  </li>  
-  <li>
-    <%= link_to dashboard_items_path, class: "nav-link rails-link" do %>
-      <i class="nav-icon fas fa-utensils"></i>
-      <p>商品</p>
-    <% end %>
-  </li>  
-  <li>
-    <%= link_to dashboard_reservations_path, class: "nav-link" do %>
-      <i class="nav-icon far fa-calendar-check"></i>
-      <p>予約一覧</p>
-    <% end %>
-  </li>
-  <li>
-    <%= link_to dashboard_calendar_path, class: "nav-link" do %>
-      <i class="nav-icon far fa-calendar-alt"></i>
-      <p>予約カレンダー</p>
-    <% end %>
-  </li>
-  <li>
-    <%= link_to dashboard_contacts_path, class: "nav-link" do %>
-      <i class="nav-icon far fa-envelope"></i>
-      <p>お問い合わせ</p>
-    <% end %>
-  </li>  
-  </ul>
-  </div>
+    <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+      <ul>
+        <li>
+          <%= link_to dashboard_path, class: "nav-link" do %>
+            <i class="nav-icon fas fa-home"></i>
+            <p>Home</p>
+          <% end %>
+        </li>  
+        <li>
+          <%= link_to dashboard_users_path, class: "nav-link" do %>
+            <i class="nav-icon far fa-user"></i>
+            <p>顧客一覧</p>
+          <% end %>
+        </li>  
+        <li>
+          <%= link_to dashboard_items_path, class: "nav-link rails-link" do %>
+            <i class="nav-icon fas fa-utensils"></i>
+            <p>商品</p>
+          <% end %>
+        </li>  
+        <li>
+          <%= link_to dashboard_reservations_path, class: "nav-link" do %>
+            <i class="nav-icon far fa-calendar-check"></i>
+            <p>予約一覧</p>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to dashboard_calendar_path, class: "nav-link" do %>
+            <i class="nav-icon far fa-calendar-alt"></i>
+            <p>予約カレンダー</p>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to dashboard_contacts_path, class: "nav-link" do %>
+            <i class="nav-icon far fa-envelope"></i>
+            <p>お問い合わせ</p>
+          <% end %>
+        </li>  
+      </ul>
+    </div>
   </nav>
     
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -59,7 +59,11 @@
     });
 
   </script>
-
-  <%= link_to root_path, class: "btn btn-new" do %>
-    <p>予約サイトへ</p>
-  <% end %>
+  <div class="container">
+    <%= link_to destroy_user_session_path , method: :delete , class: "btn btn-dark btn-sm" do %>
+      <p> 管理者ログアウト</p>
+    <% end %>
+    <%= link_to root_path, class: "btn btn-secondary btn-sm" do %>
+      <p>予約サイトへ</p>
+    <% end %>
+  </div>
