--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,7 @@
     <header>
       <%= render 'layouts/header'%>
     </header>
-    <% if flash.present? %>
-      <div class="flash">
-        <% flash.each do |key, value| %>
-          <div class="<%= key %>">
-            <%= value %>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+    <%= render 'layouts/flash'%>
     <%= yield %>
     <footer>
     <%= render 'layouts/footer'%>
