--- a/app/views/layouts/dashboard/dashboard.html.erb
+++ b/app/views/layouts/dashboard/dashboard.html.erb
@@ -18,6 +18,7 @@
     </div>
     <div class="col">
       <main class="py-4 mb-5">
+        <%= render 'layouts/flash'%>
         <%= yield %>
       </main>
     </div>
