--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,6 +57,10 @@
     </div>
 
     <hr>
+    <div class="text-right">
+      <%=link_to "退会する", confirm_users_path, class: "btn btn-danger mb-2"%>
+    </div>
+    
 
   </div>
 </div>
