admin側のbtnの色変更

--- a/app/views/dashboard/contacts/_contact.html.erb
+++ b/app/views/dashboard/contacts/_contact.html.erb
@@ -10,7 +10,7 @@
       <%= contact.status_i18n %>
     </td>
     <td class="text-nowrap">
-      <%= link_to dashboard_contact_path(contact), class: "btn btn-info btn-sm" do %>
+      <%= link_to dashboard_contact_path(contact), class: "btn btn-detail btn-sm" do %>
         詳細
       <% end%>
     </td>
