[fix]aboutページの表記を変更

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,7 +14,7 @@
       <table class="table table-bordered bg-white">
         <h3 class="text-center mb-5">ICHIGO大福</h3>
         <tr>
-          <th scope="row" class="align-middle text-center">営業時間</th>
+          <th scope="row" class="align-middle text-center">OPEN＆HOLIDAY</th>
           <td>
               月曜日 10:00 ～ 12:00<br>
               火曜日 10:00 ～ 12:00<br>
@@ -27,22 +27,22 @@
           </td>
         </tr>
         <tr>
-          <th scope="row" class="text-center">お問い合わせ電話番号</th>
+          <th scope="row" class="text-center">TEL</th>
           <td>025-567-678</td>
         </tr>
         <tr>
-          <th scope="row" class="align-middle text-center">所在地</th>
+          <th scope="row" class="align-middle text-center">ADDRESS</th>
           <td>西県北市東区南村7-8-15</td>
         </tr>
         <tr>
-          <th scope="row" class="text-center">アクセス方法</th>
+          <th scope="row" class="text-center">ACCESS</th>
           <td>
             東急東横線  南光駅  徒歩約13分
             東急東横線  北前駅    徒歩約16分
           </td>
         </tr>
         <tr>
-          <th scope="row" class="text-center">駐車場</th>
+          <th scope="row" class="text-center">PARKING</th>
           <td>有</td>
         </tr>
       </table>
