[fix]viewのリスポンシブ対応できるように

--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row px-2 mt-5">
+<div class="row px-2 content">
   <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
     <% unless user_signed_in? %>
       <div class="text-center mb-3">
