--- a/app/views/contacts/confirm.html.erb
+++ b/app/views/contacts/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content">
   <h1 class="text-center my-5">お問い合わせ内容確認</h1>
   <div class="row">
     <div class="col-12 col-md-8 offset-md-2 p-3 mb-4">
