--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content">
   <h1 class="text-center my-5">お問い合わせ</h1>
   <div class="row px-2">
     <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 border p-3 mb-4">
