--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container content">
   <h1 class="text-center my-5">ご予約内容確認</h1>
   <div class="row">
     <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
