[fix]定休日表示 #38

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row px-2">
     <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 border p-3 mb-4">
       <h2 class="today-ichigo">本日のいちご</h2><br>
-      <p class="text-center" style="color:red;">季節により1種類〜3種類の苺です<br>
+      <p class="text-center text-danger">季節により1種類〜3種類の苺です<br>
       （ご指定頂けませんのでご了承ください）</p>
       <tbody>
         <% @items.each do |item| %>
@@ -14,8 +14,8 @@
           <td><%= item.name %></td>
           <td><%= item.price.to_s(:delimited) %>円</td>
         </tr>
+        <br>
         <% end %>
-        <P></P>
       </tbody>
     </div>
   </div>
