--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
     <div class='col-12'>
 
       <div class="text-center my-2">
-
+        <%= image_tag "ichigo-logo.png",width:"70px"%>
         <%= link_to "https://www.twitter.com/", target: :_blank, rel: "noopener noreferrer" do %>
 
           <i class="fab fa-twitter fa-2x mr-1 footer-text"></i>
