--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -12,7 +12,8 @@
   <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 border p-3 mb-4">
     <%= render "form" %>
     <div class="text-center my-3">
-      <p><%= link_to "利用規約", terms_path %>、<%= link_to "プライバシーポリシー", privacy_path %>をご確認の上、ボタンを押してください。</p>
+      <p><span class="form_agree"><%= link_to "利用規約", terms_path %></span>、
+      <span class="form_agree"><%= link_to "プライバシーポリシー", privacy_path %></span>をご確認の上、ボタンを押してください。</p>
     </div>
   </div>
   <div class="col-12 text-center mb-5">
