[fix]herokuエラー修正

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,7 @@
 <div id="top">
 	<div id="wrapper">
 		<div id="content">
-			<p class="top-main_image"><%=image_tag "ichigo-image1",width:"100%"%></p>
+			<p class="top-main_image"><%=image_tag "ichigo-image1.jpeg",width:"100%"%></p>
 			<section id="section1">
 				<h2 class="top-title"><span>ICHIGO大福</span></h2>
 				<p class="top-title_border"></p>
